--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="Skills">
       <h2>My Skills.</h2>
       <div class="Skill-row">
-        <img class="code-img" src="https://media1.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif"alt="">
+        <img class="code-img" src="https://cdn.dribbble.com/users/2676018/screenshots/12285920/media/1bd5f721ddca471bf35a66385acf13c1.gif"alt="">
         <h3>Design & Development</h3>
         <p>I started learning to code when i entered to B.E/B.Tech i want to make my own web site and games.over time , i have gained a wealth of experience design and developing mobile and web applications</p>
       </div>
